@@ -133,6 +133,10 @@ Deprecated Functionality
 
 - Returning ``Val*`` from BIFs is deprecated, return ``IntrusivePtr`` instead.
 
+- Various methods of converting protocol structures, like IP or packet headers,
+  to associated ``Val`` type are now deprecated, the deprecation warning
+  message will advice what new method to use instead.
+
 Zeek 3.1.0
 ==========
 
